# edu_neural_playground

./: .gitignore  README.md  pyproject.toml  sources
exercises/: 1_task.ipynb  3_task.ipynb  4_task.ipynb  5_task.ipynb  6_task.ipynb  7_task.ipynb  8_task.ipynb  mnist_full.pt
exercises/.ipynb_checkpoints/: 2_task-checkpoint.ipynb
